[CAMEL-8567] New camel-raspberry component (1st version)

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -178,6 +178,7 @@
     <module>camel-quartz2</module>
     <module>camel-quickfix</module>
     <module>camel-rabbitmq</module>
+    <module>camel-raspberry</module>
     <module>camel-restlet</module>
     <module>camel-rmi</module>
     <module>camel-routebox</module>
