--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -391,6 +391,7 @@
     <quartz2-version>2.2.1</quartz2-version>
     <quickfix-bundle-version>1.5.3_1</quickfix-bundle-version>
     <rabbitmq-amqp-client-version>3.3.4</rabbitmq-amqp-client-version>
+    <pi4j-version>1.0-RC</pi4j-version>
     <reflections-bundle-version>0.9.8_1</reflections-bundle-version>
     <regexp-bundle-version>1.4_1</regexp-bundle-version>
     <restlet-version>2.2.3</restlet-version>
@@ -1262,6 +1263,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-rabbitmq</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-raspberry</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
