8569 Ability to easily extract email attachments
Code + unit for feature request 8569-Ability to easily extract email attachments

--- a/components/camel-mail/pom.xml
+++ b/components/camel-mail/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>${commons-io-version}</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
