--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -250,7 +250,8 @@
     <jboss-marshalling-version>1.3.18.GA</jboss-marshalling-version>
     <jclouds-version>1.9.0</jclouds-version>
     <!-- jclouds must use this guava version -->
-    <jclouds-google-guava-version>17.0</jclouds-google-guava-version>
+    <jclouds-google-guava-version>16.0</jclouds-google-guava-version>
+    <jclouds-google-guava-version-range>[16.0,17.0)</jclouds-google-guava-version-range>
     <jcr-version>2.0</jcr-version>
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
     <jdom-version>1.1.3</jdom-version>
