CAMEL-7833 InOnly and InOut routes as Observable<Exchange> sequences

--- a/components/camel-rx/pom.xml
+++ b/components/camel-rx/pom.xml
@@ -39,6 +39,10 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-restlet</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>io.reactivex</groupId>
@@ -61,6 +65,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>2.3.0</version>
     </dependency>
   </dependencies>
 
