--- a/components/camel-rx/pom.xml
+++ b/components/camel-rx/pom.xml
@@ -39,11 +39,7 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-restlet</artifactId>
-    </dependency>
-
+    
     <dependency>
       <groupId>io.reactivex</groupId>
       <artifactId>rxjava</artifactId>
@@ -51,6 +47,10 @@
     </dependency>
 
     <!-- test dependencies -->
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-restlet</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test</artifactId>
@@ -70,6 +70,7 @@
       <groupId>com.jayway.restassured</groupId>
       <artifactId>rest-assured</artifactId>
       <version>2.3.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
