--- a/components/camel-linkedin/camel-linkedin-api/pom.xml
+++ b/components/camel-linkedin/camel-linkedin-api/pom.xml
@@ -20,14 +20,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.camel.component.linkedin</groupId>
+    <groupId>org.apache.camel</groupId>
     <artifactId>camel-linkedin-parent</artifactId>
     <version>2.16-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-linkedin-api</artifactId>
-  <name>Camel :: LinkedIn Component API</name>
-  <description>Camel API for LinkedIn</description>
+  <name>Camel :: LinkedIn :: API</name>
+  <description>Camel LinkedIn API</description>
   <packaging>bundle</packaging>
 
   <properties>
