--- a/components/camel-linkedin/camel-linkedin-component/pom.xml
+++ b/components/camel-linkedin/camel-linkedin-component/pom.xml
@@ -20,15 +20,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.camel.component.linkedin</groupId>
+    <groupId>org.apache.camel</groupId>
     <artifactId>camel-linkedin-parent</artifactId>
     <version>2.16-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-linkedin</artifactId>
   <packaging>bundle</packaging>
-  <name>Camel :: LinkedIn Component</name>
-  <description>Camel Component for LinkedIn</description>
+  <name>Camel :: LinkedIn :: Component</name>
+  <description>Camel LinkedIn component</description>
 
   <properties>
     <schemeName>linkedin</schemeName>
