--- a/components/camel-linkedin/pom.xml
+++ b/components/camel-linkedin/pom.xml
@@ -25,17 +25,14 @@
     <version>2.16-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.apache.camel.component.linkedin</groupId>
   <artifactId>camel-linkedin-parent</artifactId>
   <packaging>pom</packaging>
-  <version>2.16-SNAPSHOT</version>
-
-  <name>Camel :: LinkedIn Component Parent</name>
-  <description>Parent project for Camel {LinkedIn} Component</description>
+  <name>Camel :: LinkedIn :: Parent</name>
+  <description>Camel LinkedIn parent</description>
 
   <modules>
-    <module>camel-linkedin-component</module>
     <module>camel-linkedin-api</module>
+    <module>camel-linkedin-component</module>
   </modules>
 
   <profiles>
@@ -49,7 +46,7 @@
               <childDelegation>false</childDelegation>
               <useFile>true</useFile>
               <forkCount>1</forkCount>
-	      <reuseForks>true</reuseForks>
+	            <reuseForks>true</reuseForks>
               <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
               <excludes>
                 <exclude>**/*XXXTest.java</exclude>
