--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1112,12 +1112,12 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.camel.component.linkedin</groupId>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-linkedin-api</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.camel.component.linkedin</groupId>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-linkedin</artifactId>
         <version>${project.version}</version>
       </dependency>
