--- a/components/camel-olingo2/camel-olingo2-api/pom.xml
+++ b/components/camel-olingo2/camel-olingo2-api/pom.xml
@@ -20,14 +20,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.camel.component.olingo2</groupId>
+    <groupId>org.apache.camel</groupId>
     <artifactId>camel-olingo2-parent</artifactId>
     <version>2.16-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-olingo2-api</artifactId>
-  <name>Camel :: Olingo2 Component API</name>
-  <description>Camel API for Apache Olingo2</description>
+  <name>Camel :: Olingo2 :: API</name>
+  <description>Camel Olingo2 API</description>
   <packaging>bundle</packaging>
 
   <properties>
