--- a/components/camel-olingo2/camel-olingo2-component/pom.xml
+++ b/components/camel-olingo2/camel-olingo2-component/pom.xml
@@ -20,15 +20,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.camel.component.olingo2</groupId>
+    <groupId>org.apache.camel</groupId>
     <artifactId>camel-olingo2-parent</artifactId>
     <version>2.16-SNAPSHOT</version>
   </parent>
 
   <artifactId>camel-olingo2</artifactId>
   <packaging>bundle</packaging>
-  <name>Camel :: Olingo2 Component</name>
-  <description>Camel Component for Apache Olingo2</description>
+  <name>Camel :: Olingo2 :: Component</name>
+  <description>Camel Olingo2 component</description>
 
   <properties>
     <schemeName>olingo2</schemeName>
@@ -44,12 +44,10 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
-      <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.camel.component.olingo2</groupId>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-olingo2-api</artifactId>
-      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -67,9 +65,8 @@
 
     <!-- Component API javadoc in provided scope to read API signatures -->
     <dependency>
-      <groupId>org.apache.camel.component.olingo2</groupId>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-olingo2-api</artifactId>
-      <version>${project.version}</version>
       <classifier>javadoc</classifier>
       <scope>provided</scope>
     </dependency>
