CAMEL-8614: Align mvn coordinate for Camel components for linkedin and olingo2

--- a/components/camel-olingo2/camel-olingo2-component/pom.xml
+++ b/components/camel-olingo2/camel-olingo2-component/pom.xml
@@ -67,6 +67,7 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-olingo2-api</artifactId>
+      <version>${project.version}</version>
       <classifier>javadoc</classifier>
       <scope>provided</scope>
     </dependency>
