--- a/components/camel-google-calendar/pom.xml
+++ b/components/camel-google-calendar/pom.xml
@@ -27,7 +27,7 @@
 
   <artifactId>camel-google-calendar</artifactId>
   <packaging>bundle</packaging>
-  <name>Camel :: GoogleCalendar Component</name>
+  <name>Camel :: GoogleCalendar</name>
   <description>Camel Component for GoogleCalendar</description>
 
   <properties>
