--- a/components/camel-mongodb/pom.xml
+++ b/components/camel-mongodb/pom.xml
@@ -79,13 +79,24 @@
     </dependency>
   </dependencies>
 
-    <!-- skip tests on AIX -->
+    <!-- skip tests on AIX and HP-UX -->
     <profiles>
         <profile>
             <id>aix</id>
             <activation>
                 <os>
                     <family>AIX</family>
+                </os>
+            </activation>
+            <properties>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+        <profile>
+            <id>hpux</id>
+            <activation>
+                <os>
+                    <family>HP-UX</family>
                 </os>
             </activation>
             <properties>
