--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -64,7 +64,7 @@
     <avro-bundle-version>1.7.7_1</avro-bundle-version>
     <avro-ipc-bundle-version>1.7.7_1</avro-ipc-bundle-version>
     <awaitility.version>1.6.3</awaitility.version>
-    <aws-java-sdk-bundle-version>1.9.30.1</aws-java-sdk-bundle-version>
+    <aws-java-sdk-bundle-version>1.9.22_1</aws-java-sdk-bundle-version>
     <aws-java-sdk-version>1.9.30</aws-java-sdk-version>
     <axiom-version>1.2.14</axiom-version>
     <backport-util-concurrent-version>3.1</backport-util-concurrent-version>
