--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -221,7 +221,7 @@
     <ibatis-bundle-version>2.3.4.726_4</ibatis-bundle-version>
     <ibatis-version>2.3.4.726</ibatis-version>
     <ical4j-version>1.0.5.2</ical4j-version>
-    <infinispan-version>6.0.2.Final</infinispan-version>
+    <infinispan-version>7.1.1.Final</infinispan-version>
     <irclib-bundle-version>1.10_5</irclib-bundle-version>
     <irclib-version>1.10</irclib-version>
     <isorelax-bundle-version>20050913_4</isorelax-bundle-version>
@@ -247,7 +247,7 @@
     <jaxen-version>1.1.6</jaxen-version>
     <jboss-javaee-6-version>1.0.0.Final</jboss-javaee-6-version>
     <jboss-logging-version>3.1.4.GA</jboss-logging-version>
-    <jboss-marshalling-version>1.3.18.GA</jboss-marshalling-version>
+    <jboss-marshalling-version>1.4.4.Final</jboss-marshalling-version>
     <jclouds-version>1.9.0</jclouds-version>
     <!-- jclouds must use this guava version -->
     <jclouds-google-guava-version>16.0</jclouds-google-guava-version>
@@ -265,7 +265,7 @@
     <jettison-version>1.3.7</jettison-version>
     <jexcelapi-bundle-version>2.4.2_4</jexcelapi-bundle-version>
     <jexcelapi-version>2.4.2</jexcelapi-version>
-    <jgroups-version>3.4.1.Final</jgroups-version>
+    <jgroups-version>3.6.1.Final</jgroups-version>
     <jibx-version>1.2.5</jibx-version>
     <jing-bundle-version>20030619_5</jing-bundle-version>
     <jing-version>20030619</jing-version>
