--- a/components/camel-pdf/src/test/resources/log4j.properties
+++ b/components/camel-pdf/src/test/resources/log4j.properties
@@ -21,7 +21,7 @@
 log4j.rootLogger=INFO, stdout
 
 # uncomment this to turn on debug of camel
-log4j.logger.org.apache.camel=DEBUG
+log4j.logger.org.apache.camel=INFO
 #log4j.logger.org.apache.camel.component.pgevent=TRACE
 
 # CONSOLE appender not used by default
