[CAMEL-8659] Use commons-lang 2.6 in camel-xmljson feature

--- a/components/camel-xmljson/pom.xml
+++ b/components/camel-xmljson/pom.xml
@@ -46,6 +46,11 @@
       <version>${jsonlib-version}</version>
       <classifier>jdk15</classifier>
     </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>${commons-lang-version}</version>
+    </dependency>
 
     <!-- testing -->
     <dependency>
