--- a/components/camel-pdf/src/test/resources/log4j.properties
+++ b/components/camel-pdf/src/test/resources/log4j.properties
@@ -18,11 +18,11 @@
 #
 # The logging properties used during tests
 #
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, file
 
 # uncomment this to turn on debug of camel
 log4j.logger.org.apache.camel=INFO
-#log4j.logger.org.apache.camel.component.pgevent=TRACE
+#log4j.logger.org.apache.camel.component.pdf=TRACE
 
 # CONSOLE appender not used by default
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -33,6 +33,6 @@ log4j.appender.stdout.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - 
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - %m%n
-log4j.appender.file.file=target/camel-pgevent-test.log
+log4j.appender.file.file=target/camel-pdf-test.log
 log4j.appender.file.append=true
 
