CAMEL-3552: OSGi bundle and add to kit

--- a/components/camel-pdf/pom.xml
+++ b/components/camel-pdf/pom.xml
@@ -27,6 +27,14 @@
   </parent>
 
   <artifactId>camel-pdf</artifactId>
+  <packaging>bundle</packaging>
+  <name>Camel :: PDF</name>
+  <description>Camel PDF support</description>
+
+  <properties>
+    <camel.osgi.export.pkg>org.apache.camel.component.pdf.*</camel.osgi.export.pkg>
+    <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=pdf</camel.osgi.export.service>
+  </properties>
 
   <dependencies>
     <dependency>
