--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -564,6 +564,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-pdf</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-pgevent</artifactId>
     </dependency>
     <dependency>
