--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1232,6 +1232,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-pdf</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-pgevent</artifactId>
         <version>${project.version}</version>
       </dependency>
