--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -210,6 +210,7 @@
     <hibernate-version>4.2.16.Final</hibernate-version>
     <hsqldb-version>2.3.2</hsqldb-version>
     <htmlunit.version>2.15</htmlunit.version>
+    <htmlunit-bundle-version>2.15_1</htmlunit-bundle-version>
     <httpunit-version>1.7</httpunit-version>
     <httpcore4-version>4.3.3</httpcore4-version>
     <httpclient4-version>4.3.6</httpclient4-version>
@@ -2442,7 +2443,7 @@
         <groupId>org.jdom</groupId>
         <artifactId>jdom</artifactId>
         <version>${jdom-version}</version>
-      </dependency>            
+      </dependency>
       <dependency>
         <groupId>commons-dbcp</groupId>
         <artifactId>commons-dbcp</artifactId>
