--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -195,6 +195,7 @@
     <hibernate-version>4.2.16.Final</hibernate-version>
     <hsqldb-version>2.3.2</hsqldb-version>
     <htmlunit.version>2.15</htmlunit.version>
+    <htmlunit-bundle-version>2.15_1</htmlunit-bundle-version>
     <httpunit-version>1.7</httpunit-version>
     <httpcore4-version>4.3.3</httpcore4-version>
     <httpclient4-version>4.3.6</httpclient4-version>
@@ -2197,6 +2198,26 @@
         <groupId>org.jruby</groupId>
         <artifactId>jruby</artifactId>
         <version>${jruby-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jruby</groupId>
+        <artifactId>jruby-complete</artifactId>
+        <version>${jruby-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.python</groupId>
+        <artifactId>jython</artifactId>
+        <version>${jython-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>rhino</groupId>
+        <artifactId>js</artifactId>
+        <version>${rhino-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jdom</groupId>
+        <artifactId>jdom</artifactId>
+        <version>${jdom-version}</version>
       </dependency>
       <dependency>
         <groupId>commons-dbcp</groupId>
