[CAMEL-8690] Move hdfs2 BundleActivator to "osgi" subpackage

--- a/components/camel-hdfs2/pom.xml
+++ b/components/camel-hdfs2/pom.xml
@@ -47,7 +47,7 @@
       org.apache.hadoop.hdfs.protocol.datatransfer
     </camel.osgi.import.additional>
     <camel.osgi.activator>
-      org.apache.camel.component.hdfs2.HdfsActivator
+      org.apache.camel.component.hdfs2.osgi.HdfsActivator
     </camel.osgi.activator>
   </properties>
 
