camel-hazelcast should include client dep so its easier to use it as a client

--- a/components/camel-hazelcast/pom.xml
+++ b/components/camel-hazelcast/pom.xml
@@ -53,6 +53,11 @@
       <artifactId>hazelcast</artifactId>
       <version>${hazelcast-version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast-client</artifactId>
+      <version>${hazelcast-version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
