CAMEL-8746: Jasypt with BridgePropertyPlaceholderConfigurer is not handling spring property injection with defaults anymore. Thanks to Oliver Holzmann for the patch.

--- a/components/camel-jasypt/src/test/resources/org/apache/camel/component/jasypt/myproperties.properties
+++ b/components/camel-jasypt/src/test/resources/org/apache/camel/component/jasypt/myproperties.properties
@@ -22,3 +22,6 @@ cool.result=mock:{{cool.password}}
 # here is a password which is encrypted
 cool.password=ENC(bsW9uV37gQ0QHFu7KO03Ww==)
 # END SNIPPET: e1
+
+# overwriting spring properties default
+available.prop = Data
