CAMEL-8759 enabling google error prone source code detector by using the profile errorprone

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3191,6 +3191,33 @@
     </profile>
 
     <profile>
+      <id>errorprone</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin-version}</version>
+            <configuration>
+              <source>${jdk.version}</source>
+              <target>${jdk.version}</target>
+              <maxmem>256M</maxmem>
+              <fork>${compiler.fork}</fork>
+              <compilerId>javac-with-errorprone</compilerId>
+              <forceJavacCompilerUse>true</forceJavacCompilerUse>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                <version>${errorprone-version}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>setup.eclipse</id>
       <build>
         <defaultGoal>process-test-sources</defaultGoal>
