--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -117,6 +117,7 @@
     <commons-math3-version>3.3</commons-math3-version>
     <commons-net-version>3.3</commons-net-version>
     <commons-pool-version>1.6</commons-pool-version>
+    <commons-pool2-version>2.3</commons-pool2-version>
     <commons-vfs2-version>2.0</commons-vfs2-version>
     <concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
     <cobertura-maven-plugin-version>2.5.2</cobertura-maven-plugin-version>
