--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -235,8 +235,8 @@
     <jasper-bundle-version>6.0.36_1</jasper-bundle-version>
     <jasypt-bundle-version>1.9.2_1</jasypt-bundle-version>
     <jasypt-version>1.9.2</jasypt-version>
-    <java-apns-bundle-version>0.2.3_1</java-apns-bundle-version>
-    <java-apns-version>0.2.3</java-apns-version>
+    <java-apns-bundle-version>1.0.0.Beta6_1</java-apns-bundle-version>
+    <java-apns-version>1.0.0.Beta6</java-apns-version>
     <javacrumbs-version>0.22</javacrumbs-version>
     <javassist-bundle-version>3.12.1.GA_3</javassist-bundle-version>
     <javax.el-api-version>2.2.4</javax.el-api-version>
