--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -132,6 +132,7 @@
     <dnsjava-bundle-version>2.1.7_1</dnsjava-bundle-version>
     <docker-java-version>1.2.0</docker-java-version>
     <dom4j-bundle-version>1.6.1_5</dom4j-bundle-version>
+    <docker-bundle-version>1.2.0_1</docker-bundle-version>
     <dozer-version>5.5.1</dozer-version>
     <drools-version>6.2.0.Final</drools-version>
     <dropbox-version>1.7.7</dropbox-version>
@@ -210,6 +211,8 @@
     <hibernate-validator-version>5.0.3.Final</hibernate-validator-version>
     <!-- Spring 3.2.x and 4.0.x still stick to JPA 2.0. Hibernate 4.3.x upgraded to JPA 2.1. -->
     <hibernate-version>4.2.16.Final</hibernate-version>
+    <hk2-version>2.3.0</hk2-version>
+    <hk2-osgi-resource-version>1.0.1</hk2-osgi-resource-version>
     <hsqldb-version>2.3.2</hsqldb-version>
     <htmlunit.version>2.15</htmlunit.version>
     <htmlunit-bundle-version>2.15_1</htmlunit-bundle-version>
@@ -256,6 +259,7 @@
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
     <jdom-version>1.1.3</jdom-version>
     <jedis-client-bundle-version>2.7.1_1</jedis-client-bundle-version>
+    <jersey-version>2.11</jersey-version>
     <jetty6-bundle-version>6.1.26_4</jetty6-bundle-version>
     <jetty6-version>6.1.26</jetty6-version>
     <jetty8-version>8.1.17.v20150415</jetty8-version>
@@ -475,6 +479,8 @@
     <twitter4j-bundle-version>4.0.3_1</twitter4j-bundle-version>
     <twitter4j-version>4.0.3</twitter4j-version>
     <univocity-parsers-version>1.2.1</univocity-parsers-version>
+    <unix-socket-factory-version>2015-01-27T15-02-14</unix-socket-factory-version>
+    <unix-socket-factory-bundle-version>1.0.0</unix-socket-factory-bundle-version>
     <urlrewritefilter-version>4.0.4</urlrewritefilter-version>
     <urlrewritefilter-bundle-version>4.0.4_1</urlrewritefilter-bundle-version>
     <validation-api-version>1.1.0.Final</validation-api-version>
