Maven plugins: m2e compatibility
 - Uses BuildContext to support m2e and improve user experience in Eclipse
  - Only trigger execution when input has changed
  - Notify eclipse of change of output
 - Only support the following goals in camel-package-maven-plugin (the others are not really meant to be used by non-Camel developers)
  - generate-components-list
  - generate-dataformats-list
  - generate-languages-list
  - prepare-components

--- a/tooling/maven/camel-package-maven-plugin/pom.xml
+++ b/tooling/maven/camel-package-maven-plugin/pom.xml
@@ -59,6 +59,11 @@
       <version>2.2.1</version>
     </dependency>
     <dependency>
+      <groupId>org.sonatype.plexus</groupId>
+      <artifactId>plexus-build-api</artifactId>
+      <version>0.0.7</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.reporting</groupId>
       <artifactId>maven-reporting-api</artifactId>
     </dependency>
