--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
                 <!-- cxf does not handle comments here -->
                 <excludes>**/src/main/resources/META-INF/cxf/cxf.extension</excludes>
                 <excludes>**/src/main/resources/META-INF/cxf/bus-extensions.txt</excludes>
+                <exclude>**/src/signatures/*.txt</exclude>
                 <!-- generated files -->
                 <exclude>**/target/**/*</exclude>
                 <exclude>**/eclipse-classes/**/*</exclude>
