--- a/components/camel-google-calendar/src/test/resources/test-options.properties
+++ b/components/camel-google-calendar/src/test/resources/test-options.properties
@@ -24,5 +24,5 @@ clientSecret=
 applicationName=camel-google-calendar/1.0
 #accessToken=
 refreshToken=
-emailAddress=
-p12FileName=
+emailAddress=1013313435168-8mic477ejf86oeleuksf708ciimtb0tk@developer.gserviceaccount.com
+p12FileName=/Users/moscac/data/muleconfig/enterprise-calendar-sync-7dd5f7a6f622.p12
