[CAMEL-8808] Created Grape component.

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -108,6 +108,7 @@
     <module>camel-google-drive</module>
     <module>camel-google-mail</module>
     <module>camel-gora</module>
+    <module>camel-grape</module>
     <module>camel-gson</module>
     <module>camel-guava-eventbus</module>
     <module>camel-guice</module>
