--- a/components/camel-slack/pom.xml
+++ b/components/camel-slack/pom.xml
@@ -37,14 +37,8 @@
 
         <!-- test dependencies -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-test</artifactId>
-            <scope>test</scope>
+            <artifactId>camel-test-blueprint</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
