--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -668,6 +668,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-slack</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-smpp</artifactId>
     </dependency>
     <dependency>
