--- a/components/pom.xml
+++ b/components/pom.xml
@@ -199,6 +199,7 @@
     <module>camel-smpp</module>
     <module>camel-snmp</module>
     <module>camel-sjms</module>
+    <module>camel-slack</module>
     <module>camel-soap</module>
     <module>camel-solr</module>
     <module>camel-spark-rest</module>
