--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -294,6 +294,7 @@
     <json4s-bundle-version>3.2.8_1</json4s-bundle-version>
     <json-asm-version>1.0.2</json-asm-version>
     <json-path-version>2.0.0</json-path-version>
+    <json-simple-version>1.1.1</json-simple-version>
     <json-smart-version>2.1.1</json-smart-version>
     <jsp-api-2.1-version>1.0.1</jsp-api-2.1-version>
     <jsr311-api-version>1.1.1</jsr311-api-version>
@@ -1371,6 +1372,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-sjms</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-slack</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
