--- a/components/camel-grape/pom.xml
+++ b/components/camel-grape/pom.xml
@@ -69,10 +69,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
-      <version>${logback-version}</version>
     </dependency>
   </dependencies>
 
