--- a/components/camel-grape/pom.xml
+++ b/components/camel-grape/pom.xml
@@ -107,6 +107,28 @@
         <version>${groovy-eclipse-compiler.version}</version>
         <extensions>true</extensions>
       </plugin>
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.3</version>
+        <executions>
+          <execution>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>replace</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <file>${basedir}/target/classes/org/apache/camel/component/grape/grape.json</file>
+          <replacements>
+            <replacement>
+              <token>ARTIFACT_VERSION</token>
+              <value>${version}</value>
+            </replacement>
+          </replacements>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
