--- a/tooling/archetypes/pom.xml
+++ b/tooling/archetypes/pom.xml
@@ -43,6 +43,7 @@
     <module>camel-archetype-scala</module>
     <module>camel-archetype-scr</module>
     <module>camel-archetype-spring</module>
+    <module>camel-archetype-spring-boot</module>
     <module>camel-archetype-spring-dm</module>
     <module>camel-archetype-web</module>
   </modules>
