--- a/tooling/archetypes/pom.xml
+++ b/tooling/archetypes/pom.xml
@@ -34,6 +34,7 @@
     <module>camel-archetype-activemq</module>
     <module>camel-archetype-api-component</module>
     <module>camel-archetype-blueprint</module>
+    <module>camel-archetype-cdi</module>
     <module>camel-archetype-component</module>
     <module>camel-archetype-cxf-code-first-blueprint</module>
     <module>camel-archetype-cxf-contract-first-blueprint</module>
