CAMEL-8846: camel-archetype-web - Should use servlet as example

--- a/tooling/archetypes/camel-archetype-web/src/main/resources/archetype-resources/pom.xml
+++ b/tooling/archetypes/camel-archetype-web/src/main/resources/archetype-resources/pom.xml
@@ -49,7 +49,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-stream</artifactId>
+      <artifactId>camel-servlet</artifactId>
       <version>${camel-version}</version>
     </dependency>
 
