--- a/tooling/archetypes/camel-archetype-blueprint/src/main/resources/archetype-resources/pom.xml
+++ b/tooling/archetypes/camel-archetype-blueprint/src/main/resources/archetype-resources/pom.xml
@@ -65,6 +65,7 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test-blueprint</artifactId>
       <version>${camel-version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
