Upgrade to async-http-client version 1.9.27 and grizzly-websockets version 2.3.21, also add the missing dependency to the camel-ahc-ws POM to fix it's currently failing tests on the CI-Server.

--- a/components/camel-ahc-ws/pom.xml
+++ b/components/camel-ahc-ws/pom.xml
@@ -50,6 +50,12 @@
       <version>${grizzly-websockets-version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.grizzly</groupId>
+      <artifactId>connection-pool</artifactId>
+      <version>${grizzly-websockets-version}</version>
+      <optional>true</optional>
+    </dependency>
 
     <!-- testing -->
     <dependency>
