--- a/components/camel-twitter/pom.xml
+++ b/components/camel-twitter/pom.xml
@@ -15,62 +15,63 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.apache.camel</groupId>
-        <artifactId>components</artifactId>
-        <version>2.16-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>components</artifactId>
+    <version>2.16-SNAPSHOT</version>
+  </parent>
 
-   <artifactId>camel-twitter</artifactId>
-   <packaging>bundle</packaging>
-   <name>Camel :: Twitter</name>
-   <description>Camel Twitter support</description>
+  <artifactId>camel-twitter</artifactId>
+  <packaging>bundle</packaging>
+  <name>Camel :: Twitter</name>
+  <description>Camel Twitter support</description>
 
-   <properties>
-      <camel.osgi.export.pkg>org.apache.camel.component.twitter.*</camel.osgi.export.pkg>
-      <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=twitter</camel.osgi.export.service>
-   </properties>
+  <properties>
+    <camel.osgi.export.pkg>org.apache.camel.component.twitter.*</camel.osgi.export.pkg>
+    <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=twitter</camel.osgi.export.service>
+  </properties>
 
-   <dependencies>
-      <dependency>
-         <groupId>org.apache.camel</groupId>
-         <artifactId>camel-core</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>org.twitter4j</groupId>
-         <artifactId>twitter4j-core</artifactId>
-         <version>${twitter4j-version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.twitter4j</groupId>
-         <artifactId>twitter4j-stream</artifactId>
-         <version>${twitter4j-version}</version>
-      </dependency>
-      
-      <!-- test dependencies -->
-      <dependency>
-         <groupId>org.apache.camel</groupId>
-         <artifactId>camel-test</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-     	 <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-log4j12</artifactId>
-         <scope>test</scope>
-      </dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-core</artifactId>
+      <version>${twitter4j-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-stream</artifactId>
+      <version>${twitter4j-version}</version>
+    </dependency>
 
-   </dependencies>
-   
-   <build>
+    <!-- test dependencies -->
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
+
+  <build>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -78,17 +79,17 @@
           <childDelegation>false</childDelegation>
           <useFile>true</useFile>
           <forkCount>1</forkCount>
-	  <reuseForks>true</reuseForks>
+          <reuseForks>true</reuseForks>
           <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
           <includes>
-             <!-- Here we only run test of  -->
-             <include>**/*UriConfigurationTest.java</include>
+            <!-- Here we only run test of  -->
+            <include>**/*UriConfigurationTest.java</include>
           </includes>
         </configuration>
       </plugin>
     </plugins>
   </build>
-  
+
   <profiles>
     <profile>
       <id>twitter-test</id>
@@ -96,18 +97,18 @@
         <plugins>
           <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
-              <configuration>
-                <childDelegation>false</childDelegation>
-                <useFile>true</useFile>
-          	<forkCount>1</forkCount>
-	  	<reuseForks>true</reuseForks>
-                <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
-                <includes>
-                  <include>**/*Test.java</include>
-                </includes>
-              </configuration>
-            </plugin>
-         </plugins>
+            <configuration>
+              <childDelegation>false</childDelegation>
+              <useFile>true</useFile>
+              <forkCount>1</forkCount>
+              <reuseForks>true</reuseForks>
+              <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
+              <includes>
+                <include>**/*Test.java</include>
+              </includes>
+            </configuration>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
