[CAMEL-8928] spring-security not part of the camel BOM

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2122,6 +2122,16 @@
         <artifactId>spring-osgi-mock</artifactId>
         <version>${spring-osgi-version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring-security-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring-security-version}</version>
+      </dependency>
 
       <dependency>
         <groupId>javax.annotation</groupId>
